crates/monochange/src/__tests__/snapshots/monochange__mcp__tests__release_preview_reports_config_errors_when_changesets_are_missing@release_preview_reports_config_errors_when_changesets_are_missing.snap
---
source: crates/monochange/src/__tests__/mcp_tests.rs
expression: content_text(&result)
---
{
  "action": "release_preview",
  "error": "config error: no markdown changesets found under .changeset",
  "ok": false,
  "root": "[ROOT]
  "summary": "config error: no markdown changesets found under .changeset"
}
