crates/monochange/src/__tests__/snapshots/monochange__mcp__tests__response@change_writes_markdown_changeset.snap
---
source: crates/monochange/src/__tests__/mcp_tests.rs
expression: content_text(&result)
---
{
  "action": "change",
  "ok": true,
  "path": "[ROOT]/.changeset/core.md",
  "root": "[ROOT]
  "summary": "Wrote change file [ROOT]/.changeset/core.md"
}
