crates/monochange/src/__tests__/snapshots/monochange__mcp__tests__validate_reports_config_errors_for_invalid_workspace_fixture@validate_reports_config_errors_for_invalid_workspace_fixture.snap
---
source: crates/monochange/src/__tests__/mcp_tests.rs
expression: content_text(&result)
---
{
  "action": "validate",
  "error": "config error: [changelog].templates uses unsupported variables: commit_hash",
  "ok": false,
  "root": "[ROOT]
  "summary": "config error: [changelog].templates uses unsupported variables: commit_hash"
}
