crates/monochange/src/__tests__/snapshots/monochange__mcp__tests__validate_reports_success_for_valid_workspace_fixture@validate_reports_success_for_valid_workspace_fixture.snap
---
source: crates/monochange/src/__tests__/mcp_tests.rs
expression: content_text(&result)
---
{
  "action": "validate",
  "ok": true,
  "root": "[ROOT]
  "summary": "workspace validation passed"
}
